UI Fixes And Code Enhancements (#3)
* FIX: Fix padding too small for quote on home page

* FIX/ENHANCE: Add spacing unit implementation, fix weird overflow issue on mobile

* FIX: Fix small display issue for marketing section

* ⚠️ MAJOR: Move section content to front-matter.

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -51,7 +51,6 @@ h2 {
   }
   &__quote {
     font-size: 30px;
-    padding-bottom: 20px;
   }
   &--right {
     &__image {
@@ -96,6 +95,7 @@ h2 {
     max-width: 40%;
     position: relative;
     text-align: left;
+    padding: $spacing-unit;
     h2 {
       font-size: 40px;
     }
